# web_chat

./: .gitignore  Cargo.toml  README.md
migrations/2022-07-20-113201_create_users/: up.sql
migrations/2022-07-29-082035_create_groups/: up.sql
migrations/2022-07-29-082843_create_groups_users/: up.sql
src/: main.rs  schema.rs
src/errors/: mod.rs
src/jwt/: mod.rs
src/models/: group.rs  lobby.rs  messages.rs  mod.rs  user.rs  ws.rs
src/routes/: index.rs  login.rs  mod.rs  register.rs
src/routes/chat/: add.rs  connection.rs  join.rs  mod.rs  remove.rs
src/utils/: mod.rs
