[package]
name = "web_shop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
actix = "0.13.0"
actix-web = "4.1.0"
actix-web-actors = "4.1.0"
bcrypt = "0.13.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
serde_json = "1.0.82"
serde = { version = "1.0.139", features = ["derive"] }
actix-web-validator = "4.0.0"
validator = { version = "0.16.0", features = ["derive"] }
derive_more = "0.99.17"
actix-session = { version = "0.7.0", features = ["cookie-session"] }
r2d2 = "0.8.10"
actix-identity = "0.5.2"
lazy_static = "1.4.0"
jsonwebtoken = "8.1.1"
cargo-watch = "8.1.2"
env_logger = "0.9.0"
futures = "0.3.21"
